--- a/omdatabase/utils/config_defaults.yaml
+++ b/omdatabase/utils/config_defaults.yaml
@@ -1,7 +1,7 @@
 ## config file for build databases for different species
 ## from different public databases
 
-BASE_DIR: '/public/database/'
+BASE_DIR: '/workspace/public/database/'
 
 
 ANALYSIS:
