--- a/omdatabase/utils/kingdom.yaml
+++ b/omdatabase/utils/kingdom.yaml
@@ -1,1 +1,2 @@
-{!!python/unicode 'oryza_sativa': !!python/unicode 'plant'}
+{!!python/unicode 'arabidopsis_thaliana': !!python/unicode 'plant', !!python/unicode 'danio_rerio': !!python/unicode 'animal',
+  !!python/unicode 'oryza_sativa': !!python/unicode 'plant'}
